--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -606,8 +606,9 @@ nav > ul > li > a:hover{
 
 /* content */
 #content{
+    position: relative;
     background-color: #eee;
-    padding: 20px;
+    padding: 40px 20px;
 }
 
 .content_wrap{
@@ -616,8 +617,11 @@ nav > ul > li > a:hover{
     background-color: #fff;
     width: 90%;
     max-width: 1440px;
-    margin: 20px auto;
+    min-width: 480px;
+    margin: 0px auto;
     overflow: hidden;
+    transition: .1s;
+    border-left: 20px solid #79B947;
 }
 
 .content_box_title{padding: 10px;position: relative;}
@@ -627,19 +631,18 @@ nav > ul > li > a:hover{
     width: 25px;
     height: 25px;
     transform: rotate(45deg);
-    background-color: #111;
+    background-color: #555;
     top: 15px;
-    left: -40px;
+    left: -100px;
     border-radius: 2px;
     transition: .3s;
-    opacity: 0.5;
 }
 
-.content_wrap:hover .content_box_title_circle{opacity: 1;left: -35px;}
+.content_wrap:hover .content_box_title_circle{left: -40px;}
 
 /* food_intro */
 #food_intro > .content_box_title > h2{color: #58A021;}
-#food_intro > .content_box_title > .content_box_title_circle{background-color:#39A21D;}
+#food_intro > .content_box_title > .content_box_title_circle{background-color:#79B947;}
 #food_intro > .content_box{
     padding: 10px;
     display: flex;
@@ -678,8 +681,9 @@ nav > ul > li > a:hover{
 #food_intro_banner > span{color: #599C26;}
 
 /* wanju_intro */
+#wanju_intro{border-color: #B6722A;}
 #wanju_intro > .content_box_title > h2{color: #B6722A;}
-#wanju_intro > .content_box_title > .content_box_title_circle{background-color:#90500C;}
+#wanju_intro > .content_box_title > .content_box_title_circle{background-color:#B6722A;}
 #wanju_intro > .content_box{
     padding: 20px;
     background-color: #FFF3E6;
@@ -695,7 +699,8 @@ nav > ul > li > a:hover{
 }
 
 /* festival_intro */
-#festival_intro > .content_box_title > h2{color: #333;}
+#festival_intro{border-color: #555555;}
+#festival_intro > .content_box_title > h2{color: #555;}
 #festival_intro > .content_box{
     padding: 20px;
     display: flex;
@@ -734,8 +739,10 @@ footer{
 #footer_top{
     padding: 0 30px;
     padding-bottom: 30px;
-    display: grid;
-    grid-template-columns: auto 1fr auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 #footer_top > *{margin: 10px 0;}
@@ -762,7 +769,6 @@ footer{
     color: #fff;
     line-height: 30px;
     margin-top: 3%;
-    padding: 20px 80px;
 }
 
 #family_site{margin: 20px;}
@@ -807,7 +813,7 @@ footer{
 }
 
 /* graph */
-#graph.content_wrap{width: 30%;}
+#graph{border-color: #58A021;}
 #graph.content_wrap > .content_box_title > .content_box_title_circle{background-color: #58A021;}
 #graph.content_wrap > .content_box_title > h2{color: #58A021;}
 #graph.content_wrap > .content_box{margin: 20px;}
@@ -819,33 +825,19 @@ footer{
 }
 
 /* table */
-#table.content_wrap{width: 50%;}
+#table{border-color: #90500C;}
 #table.content_wrap > .content_box_title > .content_box_title_circle{background-color: #90500C;}
 #table.content_wrap > .content_box_title > h2{color: #B6722A;}
 #table.content_wrap > .content_box{margin: 20px;}
-#sell_table{width: 100%;border-collapse: collapse;border-radius: 5px;overflow: hidden;}
-#sell_table > thead{background-color: #CFA476;}
-#sell_table > thead > tr{
-    border-left: 1px solid #CFA476;
-    border-right: 1px solid #CFA476;
-}
-#sell_table > thead > tr > th{
-    padding: 15px;
-    color: #fff;
-    font-size: 18px;
-}
-#sell_table > tbody{border-bottom: 1px solid #ddd;}
-#sell_table > tbody >tr{
-    border-left: 1px solid #ddd;
-    border-right: 1px solid #ddd;
-    cursor: pointer;
-    transition: 0.3s all;
+#sell_table{
+    margin: 20px auto;
+    width: 90%;
+    border-collapse: collapse;
 }
 
-#sell_table > tbody >tr:nth-child(even){background-color: #FFF6F0;}
-#sell_table > tbody > tr:hover{background-color: #FFE8D8;}
+#sell_table tr > *{padding: 20px;}
 
-#sell_table > tbody > tr > td{
-    text-align: center;
-    padding: 15px;
-}
+#sell_table th{text-align: left;}
+#sell_table thead{border-bottom: 2px solid #90500C;}
+#sell_table tbody tr:nth-child(odd){background-color: #FFFBF6;}
+#sell_table tbody tr:nth-child(even){background-color:#fff;}
